hard-gists/8a16c8e30c954aec014d/run.log
=== Docker Run Log for 8a16c8e30c954aec014d ===
Started at: Mi 29. Okt 18:06:58 CET 2025

[2025-10-29 18:06:58] START: Running container for 8a16c8e30c954aec014d
[2025-10-29 18:06:59] SUCCESS: Container d41a4ad0dd3c8572e7ec2b2808a3e53b0e193620c13deb4d928a15b6cff5b223 started for 8a16c8e30c954aec014d
=== Container logs for 8a16c8e30c954aec014d ===
  File "/snippet.py", line 16
    print "added struct \"{0}\", id: {1}".format(name, sid)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8a16c8e30c954aec014d ===
[2025-10-29 18:07:01] INFO: Container d41a4ad0dd3c8572e7ec2b2808a3e53b0e193620c13deb4d928a15b6cff5b223 has stopped
